An ugly fix for the step menu text being too large.

--- a/fastox-www/src/main/webapp/style/global.css
+++ b/fastox-www/src/main/webapp/style/global.css
@@ -77,7 +77,7 @@ add selectors here {font-size: 85%} /* =11 */
 add selectors here {font-size: 92%} /* =12 */
 add selectors here {font-size: 100%} /* =13 */
 add selectors here {font-size: 107%} /* =14 */
-#mainNav li a em, h4 {font-size: 114%} /* =15 */
+/* #mainNav li a em, h4 {font-size: 114%} */ /* =15 */
 add selectors here {font-size: 122%} /* =16 */
 add selectors here {font-size: 129%} /* =17 */
 add selectors here {font-size: 136%} /* =18 */
